# async-architecture

./: README.md  docker-compose.yml  homework1.md
accounting/: app.py  pyproject.toml  repositories.py
accounting/domain/: __init__.py  account.py  transaction.py
accounting/jobs/: __init__.py  account.py  task.py
analytics/: app.py  pyproject.toml  repositories.py
analytics/jobs/: task.py
auth_service/: .env  auth.py  authModel.py  authResponse.py  create_database.sql  pyproject.toml
schema_registry/: __init__.py  pyproject.toml  registry.py
schema_registry/schemas/tasks/assignee/: 1.json  2.json
schema_registry/schemas/users/create/: 1.json
task_tracker/: app.py  pyproject.toml
task_tracker/domain/: task.py
task_tracker/jobs/: __init__.py  user.py
task_tracker/repositories/: __init__.py  task.py  user.py
