[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
